test/lhsForget4.slq
def main(){
	forget(x):=(); // error 
	return x; // error
}
